--- a/Space Invaders/index.html
+++ b/Space Invaders/index.html
@@ -116,6 +116,7 @@
 				if (input.isDown(39)){
 					tank.x += 4;
 				}
+				tank.x = Math.max(Math.min(tank.x, screen.width - (30 + taSprite.w)), 30);
 
 				/*frames++;
 				if (frames % lvFrame === 0) {
