--- a/Space Invaders/index.html
+++ b/Space Invaders/index.html
@@ -74,7 +74,7 @@
 
 				tank = {
 					sprite: taSprite,
-					x: (screen.width = taSprite.w)/2,
+					x: (screen.width - taSprite.w)/2,
 					y: screen.height - (30 + taSprite.h)
 				};
 
